--- a/14.spring_security/exercise/blog_authentic/src/main/resources/templates/list.html
+++ b/14.spring_security/exercise/blog_authentic/src/main/resources/templates/list.html
@@ -20,16 +20,16 @@
         <th>STT</th>
         <th>Ten tac pham</th>
         <th>Ten the loai</th>
-        <th>Delete</th>
-        <th>Update</th>
+        <th th:if="${a.equals('ADMIN')}">Delete</th>
+        <th th:if="${a.equals('ADMIN')}">Update</th>
         <th>Detail</th>
     </tr>
     <tr th:each="blog, loop : ${blogList}">
         <td th:text="${loop.count}"></td>
         <td th:text="${blog.tittle}"></td>
         <td th:text="${blog.categoryBlog.nameOfCategory}"></td>
-        <td><a th:href="@{delete(id=${blog.id})}">Delete</a></td>
-        <td><a th:href="@{update(id=${blog.id})}">Update</a></td>
+        <td th:if="${a.equals('ADMIN')}"><a th:href="@{delete(id=${blog.id})}">Delete</a></td>
+        <td th:if="${a.equals('ADMIN')}"><a th:href="@{update(id=${blog.id})}">Update</a></td>
         <td><a th:href="@{detail(id=${blog.id})}">Detail</a></td>
     </tr>
 </table>
