--- a/case study/src/main/resources/templates/customer/add.html
+++ b/case study/src/main/resources/templates/customer/add.html
@@ -8,20 +8,22 @@
 </head>
 <body>
 
-<nav th:replace="~{common :: html_header}"></nav>\
+<nav th:replace="~{common :: html_header}"></nav>
 <div class="row text-center mt-3">
     <h3>Trang thêm mới khách hàng</h3></div>
-<form class="w-25 container-fluid shadow" method="post" action="/customerSave" th:object="${customer}" >
-    <input type="hidden" th:field="*{customerCode}">
+<form class="w-25 container-fluid shadow" method="post" action="/customerSave" th:object="${customerDto}">
+
     <div class="mb-3">
         <label class="form-label">Họ tên Khách Hàng</label>
-        <input type="text" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" th:field="*{customerName}">
-
+        <input type="text" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp"
+               th:field="*{customerName}">
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></p>
     <div class="mb-3">
         <label class="form-label">Ngày Sinh</label>
         <input type="date" class="form-control" aria-describedby="emailHelp" th:field="*{dateOfBirth}">
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"></p>
     <div class="mb-3">
         <label class="form-label">Giới Tính</label>
         <select th:field="*{gender}">
@@ -34,25 +36,28 @@
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{identify}">
 
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('identify')}" th:errors="*{identify}"></p>
     <div class="mb-3">
         <label class="form-label">Số Điện Thoại</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{phoneNumber}">
 
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
     <div class="mb-3">
         <label class="form-label">Email</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" name="email" th:field="*{email}">
 
-
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
     <div class="mb-3">
         <label class="form-label">Địa Chỉ</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{address}" >
+        <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{address}">
     </div>
     <div class="mb-3">
         <label class="form-label">Loại Khách Hàng</label>
         <select th:field="*{typeCustomer}">
-            <option th:each="typeCus : ${type}" th:value="${typeCus.idTypeCustomer}" th:text="${typeCus.nameOfTypeCustomer}"></option>
+            <option th:each="typeCus : ${type}" th:value="${typeCus.idTypeCustomer}"
+                    th:text="${typeCus.nameOfTypeCustomer}"></option>
         </select>
     </div>
     <div class="modal-footer">
