--- a/case study/src/main/resources/templates/customer/list.html
+++ b/case study/src/main/resources/templates/customer/list.html
@@ -69,13 +69,28 @@
     </tr>
     </tbody>
 </table>
-<div>
-    <a th:href="@{'/listCustomer'(page=${customer.number - 1}, key = ${keywordVal})}" th:if="${customer.hasPrevious()}">Previous</a>
-    <span th:text="${customer.number + 1}"></span>/<span th:text="${customer.totalPages}"></span>
-    <a th:href="@{'/listCustomer'(page=${customer.number + 1}, key = ${keywordVal})}" th:if="${customer.hasNext()}">Next</a>
-</div>
-</body>
 
+
+<nav aria-label="Page navigation example" class="mt-3">
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" th:href="@{'/listCustomer'(page=0, key = ${keywordVal})}">First
+            Page</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listCustomer'(page=${customer.number - 1}, key = ${keywordVal})}"
+                                 th:if="${customer.hasPrevious()}">Previous</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listCustomer'(page=${customer.number + 1}, key = ${keywordVal})}"
+                                 th:if="${customer.hasNext()}">Next</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listCustomer'(page=${customer.totalPages - 1}, key = ${keywordVal})}">Last
+            Page</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#">
+            <span th:text="${customer.number + 1}"></span>/<span th:text="${customer.totalPages}"></span>
+        </a></li>
+    </ul>
+</nav>
+
+</body>
 <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
      aria-hidden="true">
     <div class="modal-dialog">
