--- a/case study/src/main/resources/templates/facility/add.html
+++ b/case study/src/main/resources/templates/facility/add.html
@@ -21,15 +21,17 @@
         <label class="form-label">Tên dịch vụ</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{facilityName}">
     </div>
-
+    <p class="text-danger" th:if="${#fields.hasErrors('facilityName')}" th:errors="*{facilityName}"></p>
     <div class="mb-3">
         <label class="form-label">Diện tích sử dụng</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{area}">
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('area')}" th:errors="*{area}"></p>
     <div class="mb-3">
         <label class="form-label">Chi phí thuê</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{cost}">
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('cost')}" th:errors="*{cost}"></p>
     <div class="mb-3">
         <label class="form-label">Số lượng người tối đa</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{maxPeople}">
@@ -49,8 +51,8 @@
     <div class="mb-3" id="s2" style="display: none ">
         <label class="form-label">Số tầng</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{numberOfFloor}">
-
     </div>
+    <p class="text-danger" th:if="${#fields.hasErrors('numberOfFloor')}" th:errors="*{numberOfFloor}"></p>
     <div class="mb-3" id="s5" style="display: none ">
         <label class="form-label">Dịch vụ miễn phí đi kèm</label>
         <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{facilityFree}">
@@ -104,6 +106,7 @@
         }
     }
 </script>
+<script src="/js/bootstrap.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </html>
