--- a/case study/src/main/resources/templates/facility/list.html
+++ b/case study/src/main/resources/templates/facility/list.html
@@ -51,7 +51,7 @@
             <td th:text="${facilityNew.rentType.rentTypeName}"></td>
             <td th:text="${facilityNew.facilityType.facilityTypeName}"></td>
             <td>
-                <button onclick="delete1 ('${facility.serviceCode}')" class="btn btn-primary" data-bs-toggle="modal"
+                <button th:attr="onclick = |delete1 ('${facilityNew.facilityId}','${facilityNew.facilityName}')|" class="btn btn-primary" data-bs-toggle="modal"
                         data-bs-target="#exampleModal1">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                          class="bi bi-trash3"
@@ -73,10 +73,31 @@
                 </a>
             </td>
         </tr>
-    </c:forEach>
     </tbody>
 </table>
 
+<!--phan trang-->
+
+<nav aria-label="Page navigation example" class="mt-3">
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" th:href="@{'/listFacility'(page=0, key = ${keywordVal})}">First
+            Page</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listFacility'(page=${facility.number - 1}, key = ${keywordVal})}"
+                                 th:if="${facility.hasPrevious()}">Previous</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listFacility'(page=${facility.number + 1}, key = ${keywordVal})}"
+                                 th:if="${facility.hasNext()}">Next</a></li>
+        <li class="page-item"><a class="page-link"
+                                 th:href="@{'/listFacility'(page=${facility.totalPages - 1}, key = ${keywordVal})}">Last
+            Page</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#">
+            <span th:text="${facility.number + 1}"></span>/<span th:text="${facility.totalPages}"></span>
+        </a></li>
+    </ul>
+</nav>
+
+<!--xoa-->
 <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1"
      aria-hidden="true">
     <div class="modal-dialog">
@@ -85,19 +106,27 @@
                 <h5 class="modal-title" id="exampleModalLabel1">DELETE</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <form action="/deleteFacility" method="post">
             <div class="modal-body">
-                <input type="text" name="deleteId" id="deleteId">
+                <input type="hidden" name="deleteId" id="deleteId" >
                 Bạn có muốn xóa dịch vụ này hay không?
+                <p id="nameFacility"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                <button type="submit" class="btn btn-primary" id="confirm"></button>
+                <button type="submit" class="btn btn-primary" id="confirm">Delete</button>
             </div>
+            </form>
         </div>
     </div>
 </div>
-
-
+<script src="/js/bootstrap.min.js"></script>
+<script>
+    function delete1(id, name) {
+        document.getElementById("deleteId").value = id;
+        document.getElementById(('nameFacility')).innerText = name;
+    }
+</script>
 
 <footer th:replace=" ~{common :: html_footer}"></footer>
 </body>
