--- a/case study/src/main/resources/templates/contract/list.html
+++ b/case study/src/main/resources/templates/contract/list.html
@@ -20,6 +20,15 @@
 <nav th:replace="~{common :: html_header}"></nav>
 <div id="img_bg">
     <h3 class="text-center mt-3">Trang hợp đồng</h3></div>
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-10">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+            Add New Contact
+        </button>
+    </div>
+</div>
 <table class="table table-striped table-hover mt-3 w-75 m-auto">
     <thead class="table-primary">
     <th scope="col">#</th>
@@ -91,7 +100,7 @@
             </div>
             <div class="modal-body">
                 <form action="/saveContractDetail" method="post">
-<!--                    <input type="hidden" th:field="*{contract.idContract}" id="idContract">-->
+                    <!--                    <input type="hidden" th:field="*{contract.idContract}" id="idContract">-->
                     <input type="hidden" name="idContract" id="idContract">
                     <select name="attachFacilityId">
                         <option th:each="attachFacilityNew : ${listAttachFacility}"
@@ -108,6 +117,64 @@
         </div>
     </div>
 </div>
+
+<!--them moi hop dong-->
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel3">Modal Add New Contract</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="/saveContract" method="post" th:object="${newContract}">
+                    <div class="mb-3">
+                        <label class="form-label">Nhân Viên</label>
+                        <select th:field="*{employee}">
+                            <option th:each="employeeNew : ${employeeList}" th:value="${employeeNew.idEmployee}"
+                                    th:text="${employeeNew.nameOfEmployee}"></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Khách Hàng</label>
+                        <select th:field="*{customer}">
+                            <option th:each="customerNew : ${customerList}" th:value="${customerNew.customerCode}"
+                                    th:text="${customerNew.customerName}"></option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Ngày Bắt Đầu</label>
+                        <input class="form-control" type="date" th:field="*{startDate}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Ngày Kết Thúc</label>
+                        <input class="form-control" type="date" th:field="*{endDate}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Loại dịch vụ</label>
+                        <select th:field="*{facility}">
+                            <option th:each="facility : ${facilityList}" th:value="${facility.facilityId}"
+                                    th:text="${facility.facilityName}"></option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Tiền Đặt Cọc</label>
+                        <input class="form-control" type="text" th:field="*{deposit}">
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
